# qt-material-widgets

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appbar.cpp  dialog.cpp  flatbutton.cpp  flatbutton.h  iconbutton.cpp  iconbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-material-widgets.pro  radiobutton.cpp  resources.qrc  rippleoverlay.h  style.cpp  style.h  tab.cpp  tab.h  tabs.cpp  textfield.cpp  toggle_p.h
__old/: README.md  main.cpp  qt-material-widgets.pro
__old/components/: appmenu.cpp  avatar.h  avatar_p.h  badge_p.h  checkbox.cpp  circularprogress.cpp  circularprogress_internal.cpp  circularprogress_internal.h  collapsiblemenu.cpp  dialog_internal.cpp  dialog_internal.h  dialog_p.h  drawer_p.h  fab.cpp  fab.h  fab_p.h  flatbutton.cpp  flatbutton_internal.cpp  iconbutton.h  iconmenuplus.cpp  menuplus.cpp  menuplusproxy.cpp  menuplusproxy.h  progress.cpp  progress.h  progress_internal.h  progress_p.h  raisedbutton.cpp  scrollwidget.h  selectfield.h  selectfieldplus.cpp  selectfieldplus.h  slider_internal.cpp  sliderstatemachine.h  sliderthumb.h  slidertrack.cpp  snackbar_internal.h  snackbar_p.h  table.cpp  tabs.h  (+8 more)
__old/examples/: about.cpp  about.h  appbarexamples.cpp  appbarexamples.h  avatarexamples.h  (+17 more)
components/: CMakeLists.txt  appbar.cpp  appbar.h  appmenu.h  avatar.cpp  avatar.h  avatar_p.h  badge.cpp  badge.h  badge_p.h  checkbox.cpp  checkbox.h  checkbox_internal.cpp  checkbox_internal.h  checkbox_p.h  circularprogress.cpp  circularprogress.h  circularprogress_internal.cpp  circularprogress_internal.h  circularprogress_p.h  collapsiblemenu.h  components.pro  dialog.cpp  dialog.h  dialog_internal.cpp  dialog_internal.h  dialog_p.h  drawer.cpp  drawer.h  drawer_internal.cpp  drawer_internal.h  drawer_p.h  fab.cpp  fab.h  fab_p.h  flatbutton.cpp  flatbutton.h  flatbutton_internal.cpp  flatbutton_internal.h  flatbutton_p.h  (+208 more)
components/layouts/: qtmaterialslidelayout.cpp  qtmaterialslidelayout.h  qtmaterialslidelayout_p.h  qtmaterialsnackbarlayout.h  qtmaterialsnackbarlayout_p.h
components/lib/: qtmaterialcheckable.cpp  qtmaterialcheckable.h  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_internal.h  qtmaterialcheckable_p.h  qtmaterialoverlaywidget.cpp  qtmaterialoverlaywidget.h  qtmaterialripple.cpp  qtmaterialripple.h  qtmaterialrippleoverlay.cpp  qtmaterialrippleoverlay.h  qtmaterialstatetransition.cpp  qtmaterialstatetransition.h  qtmaterialstatetransitionevent.h  qtmaterialstyle.cpp  qtmaterialstyle.h  qtmaterialstyle_p.h  qtmaterialtheme.cpp  qtmaterialtheme.h  qtmaterialtheme_p.h
components/tools/: qtmaterializer.cpp  qtmaterializer.h  qtmaterialthemebuilder.cpp  qtmaterialthemebuilder.h
components/tools/materializer/: qtmaterializerlabel.cpp  qtmaterializerlabel.h
examples/: CMakeLists.txt  about.cpp  about.h  appbarexamples.cpp  appbarexamples.h  appbarsettingseditor.cpp  appbarsettingseditor.h  appbarsettingsform.ui  autocompletesettingseditor.cpp  autocompletesettingseditor.h  avatarexamples.cpp  avatarsettingseditor.cpp  avatarsettingseditor.h  avatarsettingsform.ui  badgesettingseditor.cpp  badgesettingseditor.h  badgesettingsform.ui  checkboxexamples.cpp  checkboxsettingseditor.cpp  checkboxsettingseditor.h  checkboxsettingsform.ui  circularprogresssettingseditor.cpp  circularprogresssettingseditor.h  circularprogresssettingsform.ui  dialogsettingseditor.cpp  dialogsettingseditor.h  dialogsettingsform.ui  drawersettingseditor.cpp  drawersettingseditor.h  drawersettingsform.ui  examplelist.cpp  examplelist.h  examples.pro  examples.qrc  exampleview.cpp  exampleview.h  fabsettingseditor.cpp  fabsettingseditor.h  fabsettingsform.ui  flatbuttonexamples.cpp  (+66 more)
lib/: checkable.cpp  checkable.h  checkable_internal.cpp  checkable_internal.h  checkable_p.h  customshadoweffect.cpp  customshadoweffect.h  overlaywidget.cpp  overlaywidget.h  qtmaterialstyle.h  qtmaterialtheme.cpp  ripple.cpp  ripple.h  rippleoverlay.cpp  rippleoverlay.h  scaleeffect.cpp  sizeproxy.cpp  sizeproxywidget.cpp  style.cpp  style.h  testrippleoverlay.h  theme.cpp  theme.h  theme_p.h  transparencyproxy.cpp  transparencyproxy.h  transparencyproxy_internal.cpp  transparencyproxy_p.h
xx/: qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialcircularprogress.h  qtmaterialcircularprogress_p.h  qtmaterialcollapsiblemenu.cpp  qtmaterialcollapsiblemenu.h  qtmaterialcollapsiblemenu_internal.cpp  qtmaterialcollapsiblemenu_internal.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialfab.cpp  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  qtmaterialiconbutton.cpp  qtmaterialiconmenu.cpp  qtmaterialmenuitem.cpp  qtmaterialmenuitem_internal.h  qtmaterialmenuitem_p.h  qtmaterialprogress.cpp  qtmaterialprogress_internal.cpp  qtmaterialprogress_internal.h  qtmaterialprogress_p.h  qtmaterialraisedbutton.cpp  qtmaterialraisedbutton.h  qtmaterialraisedbutton_p.h  qtmaterialscrollbar.cpp  qtmaterialscrollbar.h  qtmaterialselectfield.cpp  qtmaterialselectfield.h  qtmaterialslider.cpp  qtmaterialslider.h  qtmaterialslider_internal.cpp  qtmaterialslider_internal.h  qtmaterialslider_p.h  qtmaterialsnackbar.cpp  qtmaterialsnackbar.h  (+9 more)
xxlib/: qtmaterialcheckable.cpp  qtmaterialcheckable.h  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_internal.h  qtmaterialcheckable_p.h  qtmaterialoverlaywidget.cpp  qtmaterialoverlaywidget.h  qtmaterialripple.cpp  qtmaterialrippleoverlay.cpp  qtmaterialrippleoverlay.h  qtmaterialstatetransition.cpp  qtmaterialstatetransitionevent.h  qtmaterialtheme.cpp  qtmaterialtheme.h
yy/: avatarsettingseditor.cpp  badgesettingseditor.cpp  checkboxsettingseditor.cpp  checkboxsettingseditor.h  checkboxsettingsform.ui  circularprogresssettingseditor.cpp  flatbuttonsettingseditor.cpp  flatbuttonsettingseditor.h  iconmenusettingseditor.cpp  iconmenusettingseditor.h  iconmenusettingsform.ui  progresssettingseditor.cpp  raisedbuttonsettingseditor.cpp  slidersettingseditor.cpp  slidersettingsform.ui  textfieldsettingseditor.h
(+73 files in other folders)
